--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,4 +45,19 @@ iframe#tela {
 }
 
 section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(32, 5, 5, 0.849);
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(230, 216, 216, 0.733);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgb(24, 8, 8);
+    transition: transform .3s, border 1s;
 }
